[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Sprite" type="Sprite" parent="Control"]
modulate = Color( 0, 0, 0, 0.494118 )
position = Vector2( 23.5077, 25.2029 )
scale = Vector2( 28.0949, 11.1628 )
texture = ExtResource( 2 )

[node name="Mana" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.188
margin_top = 141.829
margin_right = 187.812
margin_bottom = 241.829
text = "Chara like Manana
"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.188
margin_top = -137.673
margin_right = 187.812
margin_bottom = 62.3268
text = "Game over"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -215.498
margin_top = -273.05
margin_right = 236.502
margin_bottom = -182.05
text = "New Game"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
